# luxical-tw

./: .coverage  .gitattributes  .gitignore  README.md  pyproject.toml  resolve_conflicts.py
arrow_tokenize/: Cargo.toml  README.md  pyproject.toml
arrow_tokenize/src/: lib.rs
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
examples/: custom_training_end_to_end.py  demo_luxical_capabilities.py
examples/huggingface_integration/: README.md  luxical_hf_wrapper.py
scripts/ops/: extract_ndjson_fields.py  train_really.py  verify_model.py
src/luxical/: __init__.py  chinese_teacher_embedder.py  chinese_tokenization.py  embedder.py  fast_teacher_embedder.py  misc_utils.py  trainer.py
src/luxical_tw/: __init__.py  chinese_teacher_embedder.py  chinese_tokenization.py  chinese_utils.py  embedder.py  fast_teacher_embedder.py  misc_utils.py  sparse_to_dense_neural_nets.py  teacher_embedder.py  tokenization.py  trainer.py  training.py
tests/: benchmark_async_elite.py  benchmark_multicore_scaling.py  benchmark_multiprocess_scaling.py  benchmark_openvino_elite.py  test_api_v1.py  test_chinese_model_effectiveness.py  test_chinese_tokenization.py  test_chinese_utils.py  test_embedder.py  test_fast_teacher_embedder.py  test_minimal_csr_roundtrip.py  test_misc_utils.py  test_ngrams.py  test_training.py  test_validate_dataset_cli.py
tools/: benchmark_luxical_native.py  profile_embedding.py  sparse_matmul_benchmarking.py  verify_framework_sota.py  verify_semantic_similarity.py  verify_semantic_similarity_ranked.py
(+6 files in other folders)
