[package]
name = "arrow_tokenize"
version = "1.0.2"
edition = "2021"

[lib]
name = "arrow_tokenize"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokenizers = { version = "0.21.1", features = ["http"] }
pyo3 = { version = "0.24.1" }
arrow = { version = "55.1.0", features = ["pyarrow"] }
arrow-array = { version = "55.1.0" }
arrow-data = { version = "55.1.0" }
rayon = "1.10.0"
jieba-rs = "0.7.0"

[dev-dependencies]
tempfile = "3.10.0"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
